form section added

--- a/index.html
+++ b/index.html
@@ -133,6 +133,23 @@
             </div>
         </div>
     </section>
+
+    <section class="py-16 sm:py-24 bg-[#1F2937] ">
+        <div>
+            <h3 class="text-center text-xl sm:text-3xl text-white mb-10">Ask a question</h3>
+            
+            <form>
+                <input class=" block mx-auto w-5/6 sm:w-1/2 h-12 mb-10 border-2 border-orange-800 rounded placeholder:italic text-orange-800 px-5" placeholder="Your E-mail" type="email">
+
+                <textarea class="block mx-auto w-5/6 sm:w-1/2 h-52 border-2 border-orange-800 rounded placeholder:italic text-orange-800 px-5 py-5" placeholder="Your Question"></textarea>
+
+                <button class="bg-green-900 block mx-auto px-10 py-4 mt-8 text-white text-xl sm:text-3xl hover:bg-green-500 transition">Send Now</button>
+
+
+            </form>
+
+        </div>
+    </section>
 </main>
 </body>
 </html>
