--- a/index.html
+++ b/index.html
@@ -150,6 +150,55 @@
 
         </div>
     </section>
+    <section class="bg-slate-900 my-16 sm:my-20 py-12 sm:py-24">
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 sm:gap-16 md:gap-20 justify-center items-center text-white">
+            <div class="border p-10">
+                <h5>Basic Plan</h5>
+                <h2>$ <span class="text-xl sm:text-2xl md:text-3xl font-bold">19.00</span> /month</h2>
+                <hr class="my-10">
+                <ul class="list-disc list-inside leading-10 text-xl">
+                    <li>5000 User Activities</li>
+                    <li>Unlimited Access</li>
+                    <li>No Hidden Charge</li>
+                    <li>03 Time Updates</li>
+                    <li>Figma Source File</li>
+                    <li>Many More Facilities</li>
+                </ul>
+                <button class="bg-green-900 hover:bg-green-600 transition mt-10 px-5 py-2">Purchase</button>
+
+            </div>
+            <div class="border p-10">
+                <h5>Basic Plan</h5>
+                <h2>$ <span class="text-xl sm:text-2xl md:text-3xl font-bold">19.00</span> /month</h2>
+                <hr class="my-10">
+                <ul class="list-disc list-inside leading-10 text-xl">
+                    <li>5000 User Activities</li>
+                    <li>Unlimited Access</li>
+                    <li>No Hidden Charge</li>
+                    <li>03 Time Updates</li>
+                    <li>Figma Source File</li>
+                    <li>Many More Facilities</li>
+                </ul>
+                <button class="bg-green-900  hover:bg-green-600 transition mt-10 px-5 py-2">Purchase</button>
+
+            </div>
+            <div class="border p-10">
+                <h5>Basic Plan</h5>
+                <h2>$ <span class="text-xl sm:text-2xl md:text-3xl font-bold">19.00</span> /month</h2>
+                <hr class="my-10">
+                <ul class="list-disc list-inside leading-10 text-xl">
+                    <li>5000 User Activities</li>
+                    <li>Unlimited Access</li>
+                    <li>No Hidden Charge</li>
+                    <li>03 Time Updates</li>
+                    <li>Figma Source File</li>
+                    <li>Many More Facilities</li>
+                </ul>
+                <button class="bg-green-900  hover:bg-green-600 transition mt-10 px-5 py-2">Purchase</button>
+
+            </div>
+        </div>
+    </section>
 </main>
 </body>
 </html>
