--- a/index.html
+++ b/index.html
@@ -199,6 +199,21 @@
             </div>
         </div>
     </section>
+
+    <section class="my-10 sm:my-16 md:my-20 lg:my-32 bg-lime-950 py-10 sm:py-16 md:py-20 bg-no-repeat bg-left " style="background-image: url(images/subscribe-bg.png);">
+        <div class="sm:flex text-white justify-center items-center gap-10 sm:gap-16 md:gap-20 lg:gap-32">
+            <div class="text-center mb-10 sm:mb-0 sm:border-r-2 sm:pr-28">
+                <h2>Newsletter Subscription</h2>
+                <p>Get subsribed to our newletter & receive latest lorem updates</p>
+
+            </div>
+            <div class="flex justify-center items-center gap-1 ">
+                <input class="h-10 border-none px-2" type="email" placeholder="E-mail">
+                <button class="bg-red-900 px-5 py-2 hover:bg-red-600 transition">Subscribe</button>
+
+            </div>
+        </div>
+    </section>
 </main>
 </body>
 </html>
